# organl

./: LICENSE  README.md
binaries/: angle_linux  angle_macos14  angle_macos14_intel64  helfins_linux  helfins_macos14  helfins_macos14_intel64  organl  organl_linux  organl_macos14  organl_macos14_intel64
examples/ade/: README.md  control.txt  props.txt  run.sh
examples/budding_couple/bud_enhance/: README.md  control.txt  lipids.txt  props.txt  run.sh
examples/budding_couple/bud_enhance_prot/: README.md  blocks.txt  lipids.txt  props.txt  run.sh
examples/budding_couple/bud_enhance_prot_form/: README.md  blocks.txt  control.txt  control_fast  lipids.txt  props.txt  run.sh
examples/budding_couple/bud_invert/: blocks.txt  control.txt  props.txt  run.sh
examples/minima/: README.md  control_e.txt  run.sh
examples/regtest/discocyte/: control.txt  run.sh
examples/regtest/mix_slow/: blocks.txt  control.txt  lipids.txt  props.txt  runk9.sh
examples/regtest/stomato/: control.txt  run.sh
examples/umbrella_pull/: README.md  control.txt  props.txt  run.sh
manual/: manual.aux  manual.bbl  manual.blg  manual.out  manual.tex  manual.toc  ref.bib
paper/: biophys-new.cls  macros.tex  manuscript.aux  manuscript.tex
source/: CMakeLists.txt  Makefile_r3d3  angle.cpp  autobound.cpp  blockparser.hpp  build_neighbour.hpp  checkqg1.hpp  cmake_install.cmake  collide_nb.hpp  collision.hpp  combomove.hpp  config_ng.hpp  custom_energy.hpp  deep_move.hpp  edgeterm.hpp  energy.hpp  face_eval.hpp  geocontrol.hpp  helfins.cpp  helpers.hpp  lipid.hpp  main.cpp  mc_head.h  mesh.hpp  meshproperties.hpp  minimath.hpp  monte_carlo.hpp  monte_single.hpp  nagata.hpp  property.hpp  pythonlib.cpp  remesh.hpp  simulation.hpp  triangle.hpp
source/pytests/: CMakeLists.txt  Readme.txt  pytest.py  pythonlib.cpp  setup.py
source/pytests/pynagata/: __init__.py
source/testmesh/: kube_realt.vtu
source/tools/: addfacemanip.py  genfreeze.py
